--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -20,6 +20,14 @@
     --font-size-boost-h2: 1.1rem;
 }
 
+h2{
+    color: var(--color-title);
+}
+
+p{
+    color: var(--color-p);
+}
+
 /* Font family */
 body {
     font-family: 'Roboto', sans-serif;
